<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.farmerapp.TechnologyFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/actionbartechnology"
        android:id="@+id/actionbartechnology"
        app:title="@string/Technology"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:id="@+id/tr1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <FrameLayout
                    android:id="@+id/f1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/broadcasting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:text="@string/Broadcasting" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/f2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/placement" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"
                        android:text="@string/Placement" />

                </FrameLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr2">
                <FrameLayout
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    android:id="@+id/f3"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bandplacement" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Bandplacement"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    android:id="@+id/f4"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/pellet" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pellet"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"/>

                </FrameLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr3">
                <FrameLayout
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    android:id="@+id/f5"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/stater" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Stater"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    android:id="@+id/f6"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/foliar" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Foliar"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"/>

                </FrameLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tr4">
                <FrameLayout
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    android:id="@+id/f7"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/fertigation" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fertigation"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_height="150dp"
                    android:layout_width="150dp"
                    android:id="@+id/f8"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/ib8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/arial" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Arial"
                        android:layout_gravity="center"
                        android:layout_marginTop="60dp"/>

                </FrameLayout>

            </TableRow>


        </TableLayout>
    </ScrollView>
</RelativeLayout>